syntax = "proto3";
import "object_state.proto";

package submit;

message SubmitChangesInput {
    string file = 1;
    repeated object_state.ChangeMsg changes = 2;
}

message SubmitChangesOutput {
    //The Kafka offset corresponding to each of the input changes.
    repeated uint64 offsets = 1;
}

service SubmitChanges {
    rpc SubmitChanges(SubmitChangesInput) returns (SubmitChangesOutput);
}